Murphy System/outputs/workspace_output_1769156025_2156.txt
  File "/workspace/murphy_backend_phase2.py", line 73
    cooperative_swarm = CooperativeSwarmSystem()
    ^
IndentationError: expected an indented block after 'except' statement on line 70
